fix vertical spacing

--- a/styles/sass/ui/banner.scss
+++ b/styles/sass/ui/banner.scss
@@ -14,9 +14,11 @@
     .latest 
     {
         background: rgba(255, 255, 255, 0.7);
+        
         display: inline-block;
-        margin: 0 0 .5em 0;
+        margin: 0 0 1.25em 0;
         padding: 0 .5em;
+        
         color: $color-root;
         font-size: 1rem;
         line-height: 1.5rem;
