--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1407,7 +1407,7 @@ body {
   .banner .latest {
     background: rgba(255, 255, 255, 0.7);
     display: inline-block;
-    margin: 0 0 .5em 0;
+    margin: 0 0 1.25em 0;
     padding: 0 .5em;
     color: #3c617a;
     font-size: 1rem;
